Improve: Add support force flag to store doc (#27)
* chore: added force flag supporting to store document

* chore: re-impled share link to return relative shared file path

* chore: updated swagger docs
